src/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>RA_Fulltime_Calc__c</fullName>
        <description>MOCJ Risk Assessment Calculation</description>
        <formula>case(TEXT(RA_CJA_Fulltime_Activity__c),
&apos;Yes&apos;,-2,
&apos;No&apos;, 2,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA Fulltime Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Misd_Conviction_Calc__c</fullName>
        <description>MOCJ Risk Assessment Calculation</description>
        <formula>case(TEXT(RA_Misdemeanor_last_1yr__c),
&apos;Yes&apos;,2,
&apos;No&apos;, -2,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA Misd Conviction Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Misdemeanor_last_1yr__c</fullName>
        <description>MOCJ Risk Assessment</description>
        <label>Misdemeanor Conviction in Last 1 Year</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RA_Open_Cases_Calc__c</fullName>
        <description>MOCJ Risk Assessment Calculation</description>
        <formula>case(TEXT(RA_Open_Cases__c),
&apos;Yes&apos;,1,
&apos;No&apos;, -1,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA Open Cases Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Open_Cases__c</fullName>
        <description>MOCJ Risk Assessment</description>
        <label>Open Cases</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RA_Prior_Warrant_Calc__c</fullName>
        <description>MOCJ Risk Assessment Calculation</description>
        <formula>case(TEXT(Warrant_last_4yrs__c),
&apos;Yes&apos;,1,
&apos;No&apos;, -1,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA Prior Warrant Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Total_Score_Calc__c</fullName>
        <description>Risk Assessment total score</description>
        <formula>RA_Age_Calc__c +  RA_Open_Cases_Calc__c +  RA_First_Arrest_Calc__c +  RA_Prior_Warrant_Calc__c +  RA_Misd_Conviction_Calc__c + RA_Felony_Calc__c + RA_Drug_Conviction_Calc__c + RA_Fulltime_Calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA Total Score Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date referral was received/started</description>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_YYMM__c</fullName>
        <description>return referral date as YYYY-MM</description>
        <formula>text(year(Referral_Date__c))&amp;&quot;-&quot;&amp;lpad(text(Month(Referral_Date__c)),2,&quot;0&quot;)</formula>
        <label>Referral YYMM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_is_Ineligible__c</fullName>
        <label>Referral is Ineligible</label>
        <picklist>
            <picklistValues>
                <fullName>Ineligible - High Risk Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible - Domestic Violence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible - Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible - Resides out of State/Too far from Reporting Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible - Currently in other SRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible - Client unable to comply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible - Charge Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible - Unverified community ties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible - Pending Violent Felony Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReferredBy__c</fullName>
        <label>Referred By</label>
        <picklist>
            <picklistValues>
                <fullName>CASES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CJA Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Screening_Date__c</fullName>
        <description>Date candidate was first screened in court</description>
        <label>Screening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Screening_Stage_Calc__c</fullName>
        <description>Calculate next move by users. If Ineligibility is blank, no reason to stop screening. If there is a value in ineligibility then stop screening. Check for main points: dates to calculate age (mocj ra), top arrest charge (charge eligibility and MOCJ ra), any missing data needed to calculate MOCJ RA, attorney consent, client consent.</description>
        <formula>IF(isblank( Ineligible__c ),IF(isnull(Age_at_Arrest__c),&quot;Pending Age&quot;,
 IF(isnull( Top_Arraignment_Charge_CC_lu__c ),&quot;Pending Top Arraignment Charge&quot;,
  IF(isnull( MOCJ_Risk_Category__c ),&quot;Pending MOCJ&quot;,
   IF(MOCJ_Risk_Category__c=&quot;INCOMPLETE&quot;,&quot;MOCJ Recommendation Incomplete&quot;,
    IF(isblank( text(Attorney_Consent__c )),&quot;Pending Attorney Consent&quot;,
     IF(isblank(text( Client_Consent_to_Screening__c )),&quot;Pending Client Consent&quot;,&quot;Screening Interview&quot;)))))),&quot;Stop Screening&quot;)</formula>
        <label>Screening Stage Calc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <picklist>
            <picklistValues>
                <fullName>Week Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekend Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekend Night</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervision_Level_Recommendation__c</fullName>
        <description>based on MOCJ Super Recc Part 1 and workflow</description>
        <label>Supervision Level Recommendation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Arraignment_Charge_CC_lu__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to penal codes calculated by Salesforce</description>
        <label>Top Arraignment Charge (Calc)</label>
        <referenceTo>Penal_Code__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Charge__c</fullName>
        <formula>Top_Arraignment_Charge_CC_lu__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Charge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_arraignment_charge_Court_Docs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Top charge as reported in referral docs</description>
        <label>Top arraignment charge (Court Docs)</label>
        <referenceTo>Penal_Code__c</referenceTo>
        <relationshipLabel>Referrals (Top arraignment charge (Court Docs))</relationshipLabel>
        <relationshipName>Referrals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Normally this would be the created date, but need this because of Brooklyn CIRT migration to capture actual created date, not migrated date</description>
        <label>Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warrant_last_4yrs__c</fullName>
        <description>MOCJ Risk Assessment</description>
        <label>Warrant in Last 4 Years</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X730_Evaluation_pl__c</fullName>
        <label>730 Evaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>docketid2__c</fullName>
        <label>docketid2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docketid3__c</fullName>
        <label>docketid3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docketid4__c</fullName>
        <label>docketid4</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>Admin_View</fullName>
        <columns>NAME</columns>
        <columns>Referral_Date__c</columns>
        <columns>Screening_Date__c</columns>
        <columns>Firstname__c</columns>
        <columns>Lastname__c</columns>
        <columns>NYSID__c</columns>
        <columns>ContactId__c</columns>
        <columns>Referral_is_Ineligible__c</columns>
        <columns>Docket__c</columns>
        <columns>CJA_Score__c</columns>
        <columns>AccountID__c</columns>
        <columns>Charge_A1__c</columns>
        <columns>RA_Total_Score_Calc__c</columns>
        <columns>Attorney_Consent__c</columns>
        <columns>Client_Consent_to_Screening__c</columns>
        <filterScope>Everything</filterScope>
        <label>Admin View</label>
    </listViews>
    <listViews>
        <fullName>Ineligible_Referrals_to_be_updated</fullName>
        <columns>Referral_Date__c</columns>
        <columns>NAME</columns>
        <columns>Lastname__c</columns>
        <columns>Firstname__c</columns>
        <columns>NYSID__c</columns>
        <columns>Screening_Date__c</columns>
        <columns>Ineligible__c</columns>
        <columns>Referral_is_Ineligible__c</columns>
        <columns>Docket__c</columns>
        <columns>Charge_A1__c</columns>
        <columns>Top_Arraignment_Charge_CC_lu__c</columns>
        <columns>Top_Charge__c</columns>
        <columns>Age_at_Arrest__c</columns>
        <columns>Arraignment_Outcome__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContactId__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Firstname__c</field>
            <operation>equals</operation>
            <value>TBD</value>
        </filters>
        <filters>
            <field>Lastname__c</field>
            <operation>equals</operation>
            <value>TBD</value>
        </filters>
        <label>Ineligible Referrals to be updated</label>
    </listViews>
    <listViews>
        <fullName>Not_Converted</fullName>
        <columns>NAME</columns>
        <columns>NYSID__c</columns>
        <columns>Firstname__c</columns>
        <columns>Lastname__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Arraignment_Outcome__c</columns>
        <columns>Referral_is_Ineligible__c</columns>
        <columns>Ineligible__c</columns>
        <columns>Ineligible_Reason__c</columns>
        <columns>Charge_Excludes_SRP__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Docket__c</columns>
        <columns>MOCJ_Risk_Category__c</columns>
        <columns>MOCJ_Supervision_Part1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContactId__c</field>
            <operation>equals</operation>
        </filters>
        <label>Not Converted</label>
    </listViews>
    <listViews>
        <fullName>Screening</fullName>
        <columns>NAME</columns>
        <columns>Firstname__c</columns>
        <columns>Ineligible__c</columns>
        <columns>Lastname__c</columns>
        <columns>NYSID__c</columns>
        <columns>RA_Total_Score_Calc__c</columns>
        <columns>Screening_Date__c</columns>
        <columns>Screening_Stage_Calc__c</columns>
        <columns>Court_Part_global__c</columns>
        <columns>Post_Arraignment_Referral__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Screening_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Screening</label>
    </listViews>
    <nameField>
        <displayFormat>REF-{0}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Arrest_Number_1_Validation</fullName>
        <active>false</active>
        <description>Format: 1 uppercase letter and 8 numbers CNNNNNNNN (no spaces).</description>
        <errorConditionFormula>AND(NOT(REGEX(Arrest_Number__c, &quot;([A-Z]\\d{8})&quot;)))</errorConditionFormula>
        <errorMessage>Arrest Numbers must be 1 UPPERCASE letter and 8 numbers: CNNNNNNNN (no spaces)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Arrest_Number_2_Validation</fullName>
        <active>false</active>
        <description>Format: 1 uppercase letter and 8 numbers C######## (no spaces)</description>
        <errorConditionFormula>AND(NOT(REGEX(Arrest_Number2__c, &quot;([A-Z]\\d{8})&quot;)))</errorConditionFormula>
        <errorMessage>Format: 1 uppercase letter and 8 numbers C######## (no spaces).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Arrest_Number_3_Validation</fullName>
        <active>false</active>
        <description>Format: 1 uppercase letter and 8 numbers C######## (no spaces)</description>
        <errorConditionFormula>AND(NOT(REGEX(Arrest_Number3__c, &quot;([A-Z]\\d{8})&quot;)))</errorConditionFormula>
        <errorMessage>Format: 1 uppercase letter and 8 numbers C######## (no spaces)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Arrest_Number_4_Validation</fullName>
        <active>false</active>
        <description>Format: 1 uppercase letter and 8 numbers C######## (no spaces)</description>
        <errorConditionFormula>AND(NOT(REGEX(Arrest_Number4__c, &quot;([A-Z]\\d{8})&quot;)))</errorConditionFormula>
        <errorMessage>Format: 1 uppercase letter and 8 numbers C######## (no spaces)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BookAndCase</fullName>
        <active>true</active>
        <description>book and case number must be numeric</description>
        <errorConditionFormula>IF (not(isblank(BookCaseNumber__c)), 
    Not(isnumber(BookCaseNumber__c)),
NULL)</errorConditionFormula>
        <errorDisplayField>BookCaseNumber__c</errorDisplayField>
        <errorMessage>Book &amp; Case must be a 10 digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CJA_Score_Range</fullName>
        <active>true</active>
        <description>between -12 and 12</description>
        <errorConditionFormula>or(CJA_Score__c&lt;-12,CJA_Score__c&gt;12)</errorConditionFormula>
        <errorDisplayField>CJA_Score__c</errorDisplayField>
        <errorMessage>Valid CJA is between -12 and 12</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Indictment_No_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(
     OR(LEN(  Indictment__c ) = 0,
     OR(
     AND(
 
  CONTAINS(&quot;S&quot;, LEFT( Indictment__c , 1)),
  CONTAINS(&quot;C&quot;,  MID( Indictment__c, 2, 1)),
  CONTAINS(&quot;I&quot;,  MID( Indictment__c, 3, 1)),
  CONTAINS(&quot;0123456789&quot;, MID( Indictment__c , 4,1)), 
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 5, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 6, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 7, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 8, 1)),
  MID( Indictment__c, 9, 1) = &quot;-&quot;,
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 10, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 11, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 12, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 13, 1))
  ),

  AND(
  CONTAINS(&quot;0123456789&quot;, LEFT( Indictment__c , 1)), 
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 2, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 3, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 4, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 5, 1)),
  MID( Indictment__c, 6, 1) = &quot;-&quot;,
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 7, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 8, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 9, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 10, 1)) 
)
 )
)
)</errorConditionFormula>
        <errorDisplayField>Indictment__c</errorDisplayField>
        <errorMessage>Valid Indictment # formats are : 99999-YYYY,   SCI99999-YYYY</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NYSID_Format_Validation</fullName>
        <active>true</active>
        <description>Format: 8 numbers and 1 uppercase letter NNNNNNNNC (no spaces).</description>
        <errorConditionFormula>AND (len(NYSID__c) &gt; 0, NOT(AND( LEN( NYSID__c ) = 9, CONTAINS(&quot;0123456789&quot;, LEFT( NYSID__c , 1)), CONTAINS(&quot;0123456789&quot;, MID( NYSID__c , 2, 1)), CONTAINS(&quot;0123456789&quot;, MID( NYSID__c , 3, 1)), CONTAINS(&quot;0123456789&quot;, MID( NYSID__c , 4, 1)), CONTAINS(&quot;0123456789&quot;, MID( NYSID__c , 5, 1)), CONTAINS(&quot;0123456789&quot;, MID( NYSID__c , 6, 1)), CONTAINS(&quot;0123456789&quot;, MID( NYSID__c , 7, 1)), CONTAINS(&quot;0123456789&quot;, MID( NYSID__c , 8, 1)), CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;, MID( NYSID__c , 9, 1)) )))</errorConditionFormula>
        <errorDisplayField>NYSID__c</errorDisplayField>
        <errorMessage>NYSID format must be 8 numbers and 1 UPPERCASE character. NNNNNNNNC (no spaces).</errorMessage>
    </validationRules>
</CustomObject>